--- a/ags/style/unisonic/notifications.scss
+++ b/ags/style/unisonic/notifications.scss
@@ -7,8 +7,9 @@ window.notification-popups {
     border: 0.1rem solid $border-color;
     background-color: $background-color;
     color: $font-color;
-    min-width: 20rem;
-    margin: 0.5rem;
+    min-width: 25rem;
+    padding: 0.5rem;
+    margin-bottom: .5rem;
     .icon {
       min-width: 5rem;
       min-height: 5rem;
@@ -21,7 +22,7 @@ window.notification-popups {
     }
     .title {
       color: $font-color;
-      font-size: 2em;
+      font-size: 1.5em;
     }
 
     .body {
